Actions
Bug #12525
closedunix: sparc is missing do_hotinlines()
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
add stub do_hotinlines() for sparc.
do_hotinlines() is called from common code and therefore all supported platforms need to provide one.
Related issues
Updated by Toomas Soome about 2 years ago
- Subject changed from unix: sparc is missing do_hotlines() to unix: sparc is missing do_hotinlines()
- Description updated (diff)
Updated by Peter Tribble about 2 years ago
To close the loop a little, this appears to be due to the recent integration of #9059
Updated by Robert Mustacchi about 2 years ago
- Related to Feature #9059: Simplify SMAP relocations with krtld added
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit c11c816fbf1bf201998f795321092b084ad65f58
commit c11c816fbf1bf201998f795321092b084ad65f58 Author: Toomas Soome <tsoome@me.com> Date: 2020-04-29T20:29:49.000Z 12525 unix: sparc is missing do_hotinlines() Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Patrick Mooney <pmooney@pfmooney.com> Reviewed by: John Levon <john.levon@joyent.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions