12525 unix: sparc is missing do_hotinlines() Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Patrick Mooney <pmooney@pfmooney.com> Reviewed by: John Levon <john.levon@joyent.com> Approved by: Robert Mustacchi <rm@fingolfin.org>